# python-skeleton

./: .gitignore  .maintainer.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  Makefile.docker  Makefile.precommit  Makefile.variables  README.md  entrypoint.sh  example.env  pyproject.toml
.github/workflows/: ci.yml  claude.yml
k8s/: Makefile  skeleton-deploy.yaml  skeleton-sts.yaml
src/skeleton/: __init__.py  __main__.py  config.py  factory.py  logging_setup.py  server.py
src/skeleton/handlers/: health.py  metrics.py
src/skeleton/kafka/: __init__.py  consumer.py  producer.py
tests/: __init__.py  conftest.py  test_config.py  test_factory.py  test_kafka.py  test_logging_setup.py  test_main.py  test_server.py
tests/handlers/: conftest.py  test_health.py  test_metrics.py
tests/kafka/: __init__.py  conftest.py  test_consumer.py  test_producer.py
